@@ -142,13 +142,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) Add hooks deliver_report and gather_reports to mod_dav.h. Allows other
-     modules apart from versioning implementations to handle the REPORT method.
-     trunk patch: http://svn.apache.org/r1879339
-                  http://svn.apache.org/r1879307
-     2.4.x patch: https://svn.apache.org/repos/asf/httpd/httpd/patches/2.4.x/httpd-2.4-dav-hooks1.patch
-     +1: minfrin, jim, ylavic (by inspection)
-
   *) mod_dav: Add method_precondition hook. WebDAV extensions define
      conditions that must exist before a WebDAV method can be executed.
      This hook allows a WebDAV extension to verify these preconditions.
